--- a/newsfeed1.css
+++ b/newsfeed1.css
@@ -1,21 +1,89 @@
+.two-cards > .container{
+	display: flex;
+    flex-wrap: wrap;
+    background-color: #958e8e24;
+}
+.noimg-card{
+	height:230px;
+	background-color: white;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	max-width: 300px;
+	margin: 20px;
+	text-align: right;
+	font-family: arial;
+	padding:5px;
+	border-radius:5px;
+}
 .card {
+  background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
-  margin: auto;
-  text-align: center;
+  margin: 20px;
+  text-align: right;
   font-family: arial;
+  padding:5px;
+  border-radius:5px;
 }
 
+.profile{
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.like{
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 30px;
+    border-top: 1px solid #d2d2d2bd;
+}
+.top-title{
+	font-size: 13px !important;
+}
+.headname p {
+    font-size: 12px;
+    margin: 5px;
+    margin-left: -72px;
+    text-align: left;
+    color: #615c5c;
+}
+.headname > .noimg{
+	margin-left: -45px;
+}
+.headpinbottom{
+	margin-top:16px;
+}
+.headimg p{
+	font-size:14px;
+	color:grey;
+	margin: 15px 5px 10px 10px;
+}
 .title {
-  color: grey;
+  color: #615c5c;
   font-size: 18px;
+  text-align:left;
+  margin: 5px;
+  margin: 15px 5px 10px 10px;
 }
-
+.pgeneral{
+  color: grey;
+  font-size: 14px;
+  text-align:left;
+  margin: 15px 5px 10px 10px;
+}
+.links{
+	color:blue;
+}
 .img{
 	width:100px;
     display:block;
     float: left;
 }
+.headpintop{
+	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  	filter: grayscale(100%);
+}
+ 
 .pin{
 	width:100px;
     display:block;
